# PSDtoSS6

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  deploy_key_appveyor.enc  response_file.txt  response_file_mac.txt  response_file_win.txt
.github/workflows/: main.yml
cui/: CMakeLists.txt  conanfile.txt  convert_info_sample.json  message.json
cui/ItsyPSD/: ReadMe.txt  itsypsd.cpp  itsypsd.h
cui/libpsd-0.9/: CMakeLists.txt  Makefile  libpsd.vcxproj
cui/libpsd-0.9/include/: libpsd.h  psd_config.h
cui/libpsd-0.9/src/: bevel_emboss.c  blend.c  color_overlay.c  effects.c  image_resource.c  psd_system.h
cui/libpsd-0.9/test/: main.cpp  rgbaimage.h
cui/libpsd-0.9/x64/Debug/libpsd.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  libpsd.lastbuildstate
cui/lpng1615/: CMakeLists.txt
cui/lpng1615/projects/vstudio/pnglibconf/Release/: pnglibconf.lastbuildstate
cui/source/: common.h  config.h  convertToSS.cpp  convertToSS.h  helper.cpp  helper.h  main.cpp  parameters.cpp  parameters.h  persePsd.cpp  persePsd.h  psdBitmapLayer.h  rgbaimage.h  ssOptionReader.cpp  ssOptionReader.h  stringconv.cpp  stringconv.h  system_functions.cpp  system_functions.h  tbl_outmessage.cpp  tbl_outmessage.h  texturepack.cpp  texturepack.h  typedef.h  xml_template.cpp  xml_template.h
cui/tinyxml2/: CMakeLists.txt  tinyxml2.pc  xmltest.cpp
cui/zlib-1.2.8/: CMakeLists.txt  premake4.lua  zlib.pc
gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  resource.rc  style.css  subwindow.cpp  subwindow.h  subwindow.ui  translate_en.qm  translate_en.ts  translate_ja.qm  translate_ja.ts
gui/translations/: translate_en.qm  translate_en.ts  translate_ja.qm  translate_ja.ts
scripts/: build_installer_win.bat  build_mac.sh  build_mac_cui.sh  build_mac_gui.sh  build_win.bat  build_win_2017_win64.bat  build_win_cui.bat  build_win_cui_2017_win64.bat  build_win_gui.bat  deploy.bat  prepare_mac.sh  prepare_win.bat
tools/: (Ps)PSDtoSS6_GeneratePivotLayer.jsx  Ai_PSDtoSS6_Export.jsx  Ai_PSDtoSS6_GeneratePivotLayer.jsx  Ps_PSDtoSS6_Export.jsx
